--- a/pom.xml
+++ b/pom.xml
@@ -5,11 +5,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>snw</groupId>
-    <artifactId>example</artifactId>
+    <artifactId>lifesteal</artifactId>
     <version>1.0.0</version>
     <packaging>jar</packaging>
 
-    <name>BukkitPluginExample</name>
+    <name>Lifesteal</name>
 
     <properties>
         <java.version>1.8</java.version>
