--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,4 +1,5 @@
-name: Example # Change this!
+name: Lifesteal
 version: '${project.version}'
-main: snw.example.Main # Change this!
+author: "SNWCreations"
+main: snw.lifesteal.Main
 api-version: 1.16
